--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ title: 黄威龙的Blog
     margin: 0 10%;
     -webkit-box-shadow: 4px 5px 6px rgba(0,0,0,.3);
     box-shadow: 4px 5px 6px rgba(0,0,0,.3);
+    align-content: center;
+    margin: 0 auto;
+    text-align: center;
 }
 .inner-title {
     width: 100%;
