--- a/index.html
+++ b/index.html
@@ -12,22 +12,18 @@ title: 黄威龙的Blog
     <style type="text/css">
 
 .post-title {
-    width: 80%;
-    height: 75px;
+    width: 100%;
+    height: 60px;
     background-color: rgba(66,66,66,.9);
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 0 10%;
+    align-content: center;
+    position: relative;
+    margin: 0 auto;
     -webkit-box-shadow: 4px 5px 6px rgba(0,0,0,.3);
     box-shadow: 4px 5px 6px rgba(0,0,0,.3);
-    align-content: center;
-    margin: 0 auto;
-    text-align: center;
 }
 .inner-title {
     width: 100%;
-    height: 75px;
+    height: 60px;
     -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,.3);
     box-shadow: 3px 3px 7px rgba(0,0,0,.3);
 }
@@ -42,7 +38,7 @@ title: 黄威龙的Blog
     display: inline-block;
     width: 32px;
     height: 32px;
-    margin-top: 20px;
+    margin-top: 13px;
 }
 .home {
     width: 100%;
@@ -53,17 +49,24 @@ title: 黄威龙的Blog
     display: inline-block;
     font-size: 1.25em;
     width: 80%;
-    height: 75px;
+    height: 60px;
     float: right;
     color: #fff;
     margin-right: 10%;
     text-align: center;
-    line-height: 75px;
     text-overflow: ellipsis;
     vertical-align: middle;
     letter-spacing: .1em;
     -webkit-font-smoothing: antialiased;
 }
+.posi {
+  width: 90%;
+  align-content: center;
+  position: relative;
+  margin: 0 auto;
+  padding: 0 0 0 0;
+}
+
     </style>
 </head>
 <body>
@@ -78,12 +81,13 @@ title: 黄威龙的Blog
   </div>
 </div>
 </div>
-<div class="">
-  <p>最新文章</p>
+<div class="posi">
   <ul>
+      <div class="posi">
   　　{% for post in site.posts %}
   　　　<li style="list-style-type:none;">{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
   　　{% endfor %}
+      </div>
   </ul>
 </div>
 
